доработана функциональность по тз спринта 6 после коментариев ревьюера