@@ -135,6 +135,78 @@ class InMemoryHistoryManagerTest {
         List<Task> history = historyManager.getHistory();
 
         assertEquals(1, history.size(), "History should contain 1 task");
-        assertEquals(task2, history.get(0), "Remaining task should be task2");
+        assertEquals(task2, history.getFirst(), "Remaining task should be task2");
     }
+
+    @Test
+    void removeLastTaskTest() {
+
+        historyManager.add(task1);
+        historyManager.add(task2);
+        historyManager.add(task3);
+
+        historyManager.remove(task3.getId());
+
+        List<Task> history = historyManager.getHistory();
+
+        assertEquals(2, history.size(), "History should contain 2 tasks");
+        assertEquals(task1, history.getFirst(), "First remaining task should be task1");
+        assertEquals(task2, history.get(1), "Second remaining task should be task2");
+    }
+
+    @Test
+    void removeFirstTaskTest() {
+
+        historyManager.add(task1);
+        historyManager.add(task2);
+        historyManager.add(task3);
+
+        historyManager.remove(task1.getId());
+
+        List<Task> history = historyManager.getHistory();
+
+        assertEquals(2, history.size(), "History should contain 2 tasks");
+        assertEquals(task2, history.getFirst(), "First remaining task should be task2");
+        assertEquals(task3, history.get(1), "Second remaining task should be task3");
+    }
+
+    @Test
+    void removeMiddleTaskTest() {
+
+        historyManager.add(task1);
+        historyManager.add(task2);
+        historyManager.add(task3);
+
+        historyManager.remove(task2.getId());
+
+        List<Task> history = historyManager.getHistory();
+
+        assertEquals(2, history.size(), "History should contain 2 tasks");
+        assertEquals(task1, history.getFirst(), "First remaining task should be task1");
+        assertEquals(task3, history.get(1), "Second remaining task should be task3");
+    }
+
+    @Test
+    void removeTheOnlyOneTaskTest() {
+
+        historyManager.add(task1);
+
+        historyManager.remove(task1.getId());
+
+        List<Task> history = historyManager.getHistory();
+
+        assertTrue(history.isEmpty());
+    }
+
+    @Test
+    void removeFromEmptyHistoryTest() {
+        assertTrue(historyManager.getHistory().isEmpty(), "History should be empty initially");
+
+        historyManager.remove(1);
+
+        assertTrue(historyManager.getHistory().isEmpty(), "History should still be empty after attempting to remove from empty history");
+    }
+
+
+
 }
